# shelfie

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  module.nix
nix/: sources.json
src/: main.rs
static/css/: shelfie.css
templates/: base.html  home.html  shelfie.css  show.html
